force-app/main/default/objects/FMR_Basic_Data__c/FMR_Basic_Data__c.object-meta.xml
<CustomObject>
    <label>FMR Basic Data</label>
    <nameField>
        <displayFormat>FMR-{00000}</displayFormat>
        <label>FMR Basic Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FMR Basic Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>