force-app/main/default/objects/FMR_Basic_Data__c/fields/Census_Data__c.field-meta.xml
<CustomField>
    <fullName>Census_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Census Data</label>
    <referenceTo>Census_Data__c</referenceTo>
    <relationshipLabel>FMR Basic Data</relationshipLabel>
    <relationshipName>FMR_Basic_Data</relationshipName>
    <type>Lookup</type>
</CustomField>