force-app/main/default/objects/FMR_Basic_Data__c/fields/Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Efficiency__c</fullName>
    <label>Efficiency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>