force-app/main/default/objects/FMR_Basic_Data__c/fields/Four_Bedroom__c.field-meta.xml
<CustomField>
    <fullName>Four_Bedroom__c</fullName>
    <label>Four Bedroom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>