force-app/main/default/objects/FMR_Basic_Data__c/fields/One_Bedroom__c.field-meta.xml
<CustomField>
    <fullName>One_Bedroom__c</fullName>
    <label>One Bedroom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>