force-app/main/default/objects/FMR_Basic_Data__c/fields/Three_Bedroom__c.field-meta.xml
<CustomField>
    <fullName>Three_Bedroom__c</fullName>
    <label>Three Bedroom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>