force-app/main/default/objects/FMR_Basic_Data__c/fields/Two_Bedroom__c.field-meta.xml
<CustomField>
    <fullName>Two_Bedroom__c</fullName>
    <label>Two Bedroom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>